--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 			src="https://kit.fontawesome.com/98ee59fc20.js"
 			crossorigin="anonymous"
 		></script>
-		<title>E-Commerce Mobile</title>
+		<title>Mobiles R Us</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
